# nexo-rs-poller-gmail

./: Cargo.toml  README.md  nexo-plugin.toml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
